@@ -702,99 +702,6 @@ int utils_mftrec_in_use (ntfs_volume *vol, MFT_REF mref)
 }
 
 /**
- * utils_pathname_to_inode - Find the inode which represents the given pathname
- * @vol:       An ntfs volume obtained from ntfs_mount
- * @parent:    A directory inode to begin the search (may be NULL)
- * @pathname:  Pathname to be located
- *
- * Take an ASCII pathname and find the inode that represents it.  The function
- * splits the path and then descends the directory tree.  If @parent is NULL,
- * then the root directory '.' will be used as the base for the search.
- *
- * Return:  inode  Success, the pathname was valid
- *	    NULL   Error, the pathname was invalid, or some other error occurred
- */
-ntfs_inode * utils_pathname_to_inode (ntfs_volume *vol, ntfs_inode *parent, const char *pathname)
-{
-	u64 inum;
-	int len;
-	char *p, *q;
-	ntfs_inode *ni;
-	ntfs_inode *result  = NULL;
-	ntfschar    *unicode = NULL;
-	char       *ascii   = NULL;
-
-	if (!vol || !pathname) {
-		errno = EINVAL;
-		return NULL;
-	}
-
-	if (parent) {
-		ni = parent;
-	} else {
-		ni = ntfs_inode_open (vol, FILE_root);
-		if (!ni) {
-			Eprintf ("Couldn't open the inode of the root directory.\n");
-			goto close;
-		}
-	}
-
-	unicode = calloc (1, MAX_PATH);
-	ascii   = strdup (pathname);		// Work with a r/w copy
-	if (!unicode || !ascii) {
-		Eprintf ("Out of memory.\n");
-		goto close;
-	}
-
-	p = ascii;
-	while (p && *p && *p == PATH_SEP)	// Remove leading /'s
-		p++;
-	while (p && *p) {
-		q = strchr (p, PATH_SEP);	// Find the end of the first token
-		if (q != NULL) {
-			*q = '\0';
-			q++;
-		}
-
-		len = ntfs_mbstoucs (p, &unicode, MAX_PATH);
-		if (len < 0) {
-			Eprintf ("Couldn't convert name to Unicode: %s.\n", p);
-			goto close;
-		}
-
-		inum = ntfs_inode_lookup_by_name (ni, unicode, len);
-		if (inum == (u64)-1) {
-			Eprintf ("Couldn't find name '%s' in pathname '%s'.\n", p, pathname);
-			goto close;
-		}
-
-		if (ni != parent)
-			ntfs_inode_close (ni);
-
-		inum = MREF (inum);
-		ni = ntfs_inode_open (vol, inum);
-		if (!ni) {
-			Eprintf ("Cannot open inode %llu: %s.\n",
-					(unsigned long long)inum, p);
-			goto close;
-		}
-
-		p = q;
-		while (p && *p && *p == PATH_SEP)
-			p++;
-	}
-
-	result = ni;
-	ni = NULL;
-close:
-	if (ni && (ni != parent))
-		ntfs_inode_close (ni);
-	free (ascii);
-	free (unicode);
-	return result;
-}
-
-/**
  * __metadata
  */
 static int __metadata (ntfs_volume *vol, u64 num)
